minor changes to fix portrait mode on mobile

--- a/client/src/Body.css
+++ b/client/src/Body.css
@@ -84,7 +84,7 @@
   justify-content: space-between;
   align-items: center;
   /* font-size: 16px; */
-  font-size: calc(2px + 1.5vmin);
+  font-size: calc(3px + 1.5vmin);
   cursor: pointer;
   transition: background 0.3s ease;
 }
@@ -231,6 +231,9 @@
   .resume-box {
     width: calc(100% - 40px);
   }
+  /* .resume-header {
+
+  } */
   .resume-container {
     max-width: 100%;
   }
