--- a/client/src/Header.css
+++ b/client/src/Header.css
@@ -166,4 +166,7 @@
   .Paragraph-header {
     width: calc(100% - 40px);
   }
+  .App-header {
+    width: 100%;
+  }
 }
